Fix invisible button

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -64,7 +64,4 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
-    background-color: #f9f9f9;
-  }
 }
